--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-MONGODB_URL="mongodb://localhost:27017"
+MONGODB_URL=mongodb+srv://anshul:darkgravity@cluster0.9uiwb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
 jwtSecret="skdmckwnhefhji"
