--- a/config.env
+++ b/config.env
@@ -1,2 +1,2 @@
-MONGODB_URL=mongodb+srv://anshul:darkgravity@cluster0.9uiwb.mongodb.net/myFirstDatabase?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://gaurav:$#z5AtC9BiCi2Di@cluster0.19cz6te.mongodb.net/?retryWrites=true&w=majority
 jwtSecret="skdmckwnhefhji"
