--- a/config.env
+++ b/config.env
@@ -1,2 +1,3 @@
-MONGODB_URL=mongodb+srv://gaurav:$#z5AtC9BiCi2Di@cluster0.19cz6te.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URL=mongodb+srv://gaurav:qwertyuiop@cluster0.19cz6te.mongodb.net/test
+
 jwtSecret="skdmckwnhefhji"
