--- a/config.env
+++ b/config.env
@@ -1,3 +1,3 @@
-MONGODB_URL=mongodb+srv://gaurav:qwertyuiop@cluster0.19cz6te.mongodb.net/test
+MONGODB_URL=mongodb+srv://gaurav:VMkDOmgnqhicJ3OJ@cluster1.asan0ye.mongodb.net/?retryWrites=true&w=majority
 
 jwtSecret="skdmckwnhefhji"
