--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "build": "next build",
+    "build": "next build && npm install",
     "start": "NODE_ENV=production node server.js",
     "export":"next export",
     "lint": "next lint"
